--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="module1-solution/styles/bootstrap.min.css">
-    <script src="module1-solution/lib/angular.js"></script>
-    <script src="module1-solution/app.js"></script>
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <script src="lib/angular.js"></script>
+    <script src="app.js"></script>
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
